--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                                             ramah</h4>
 
                                         <small class="carousel-name"><span
-                                                class="carousel-name-title">Gilang</span></small>
+                                                class="carousel-name-title">Budi</span></small>
                                     </div>
                                 </div>
 
@@ -339,7 +339,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                                         <h4 class="carousel-title">Layanannya bagus poll, good travel agency</h4>
 
                                         <small class="carousel-name"><span
-                                                class="carousel-name-title">Brian</span></small>
+                                                class="carousel-name-title">Asep</span></small>
                                     </div>
                                 </div>
 
@@ -349,7 +349,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                                             dan ramah</h4>
 
                                         <small class="carousel-name"><span
-                                                class="carousel-name-title">Dhea</span></small>
+                                                class="carousel-name-title">Sarah</span></small>
                                     </div>
                                 </div>
 
